--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <ul class="nav__links">
           <li class="link"><a href="#">Inicio</a></li>
-          <li class="link"><a href="#">Sobre Nosotros</a></li>
+          <li class="link"><a href="/sobre_nosotros.html">Sobre Nosotros</a></li>
           <li class="link"><a href="#">Destinos</a></li>
           <li class="link"><a href="#">Contactanos</a></li>
           <li class="link"><a href="#">Blog</a></li>
@@ -42,7 +42,7 @@
           <span><i class="ri-youtube-fill"></i></span>
         </div>
         <div class="content">
-          <h1>EXPLORA<br />SUEÑA<br /><span>DESTINOS</span></h1>
+          <h1>EXPLORA<br />SUMERGETE<br /><span>PLANIFICA</span></h1>
           <p>
             ¡Bienvenidos a El Remate, un destino único en el corazón de 
             la exuberante región de Petén, Guatemala. Situado cerca de 
